--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,4 +54,5 @@ jobs:
         uses: aws-actions/aws-codebuild-run-build@v1
         with:
           project-name: another-code-build-test
+          source-version-override: 'refs/pull/${{ github.event.pull_request.number }}/head^{${{ github.event.pull_request.head.sha }}}'
           
