--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the main branch
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
       - name: List files
         run: |
           ls
