--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  run-tests:
+  Release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the main branch
