--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - 'main'
+    tags:        
+      - '**'           # Push events to every tag including hierarchical tags like v1.0/beta
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
