--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ permissions:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Release:
+    environment: release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the main branch
