--- a/.github/workflows/node-test.yml
+++ b/.github/workflows/node-test.yml
@@ -24,3 +24,9 @@ jobs:
         # run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
         - name: Check node version
           run: node --version
+        - name: Install Dependencies
+          run: |
+            npm install --global yarn
+            sudo apt-get update
+            sudo apt-get install build-essential g++ libx11-dev libxkbfile-dev libsecret-1-dev libkrb5-dev python-is-python3 quilt
+        
