--- a/.github/workflows/node-test.yml
+++ b/.github/workflows/node-test.yml
@@ -26,9 +26,11 @@ jobs:
           run: node --version
         - name: Check npm version
           run: npm --version
+        - name: Check yarn version
+          run: yarn --version
         - name: Install Dependencies
           run: |
-            npm install --global yarn
+            # npm install --global yarn
             sudo apt-get update
             sudo apt-get install build-essential g++ libx11-dev libxkbfile-dev libsecret-1-dev libkrb5-dev python-is-python3 quilt
         
