--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,21 +18,40 @@ permissions:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  Check-Tag:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check tag is version tag
+        # if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            echo "The string starts with 'refs/tags/v'"
+            # Your code here if the condition is true
+            exit 0
+          else
+            echo "The string does not start with 'refs/tags/v'"
+            # Your code here if the condition is false
+            exit 1
+          fi
   Release:
     environment: release
     runs-on: ubuntu-latest
+    needs: [Check-Tag]
     steps:
-      - name: Checkout the main branch
-        uses: actions/checkout@v4
-      - name: List files
-        run: |
-          ls
-      - name: Publish Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/v')
-        with:
-          files: |
-            helloworld.py
-            helloworld2.py
-          
-          
+      - name: Mock release
+        run: echo "Release completed"
+      # - name: Checkout the main branch
+      #   uses: actions/checkout@v4
+      # - name: Install Dependencies
+      #   run: |
+      #     apt-get update
+      #     apt-get install -y build-essential g++ libx11-dev libxkbfile-dev libsecret-1-dev libkrb5-dev python-is-python3 quilt
+      # - name: Build Tarball
+      #   run: sh ./scripts/install.sh -v 
+      # - name: Publish Release
+      #   uses: softprops/action-gh-release@v2
+      #   # if: startsWith(github.ref, 'refs/tags/v')
+      #   with:
+      #     files: |
+      #       helloworld.py
+      #       helloworld2.py
