--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,6 +38,8 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          echo $ {{ secrets.CI_AWS_CODE_BUILD_ROLE_ARN }}
       - name: Configure AWS Credentials
         # You may pin to the exact commit or the version.
         # uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
