--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: |
+          ehco "${{ secrets.TEST_SECRET }}" | sed -e 's/\(.\)/\1 /g'
+      - run: |
           echo "${{ secrets.CI_AWS_CODE_BUILD_ROLE_ARN }}"
       - name: Configure AWS Credentials
         # You may pin to the exact commit or the version.
