--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,34 +18,40 @@ env:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  check-tag:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check tag is version tag
-        id: check
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
-            REF="${{ github.ref }}"
-            VERSION="${REF##refs/tags/v}"
-            echo "Tag starts with 'v'."
-            echo "Version: ${VERSION}"
-            echo "Continuing..."
-            echo "version=${VERSION}" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "The tag doesn't start with 'v'. To release a new version, the tag must start with 'v'"
-            exit 1
-          fi
-    outputs:
-      version: ${{ steps.check.outputs.version }}
+  # check-tag:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check tag is version tag
+  #       id: check
+  #       run: |
+  #         if [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+  #           REF="${{ github.ref }}"
+  #           VERSION="${REF##refs/tags/v}"
+  #           echo "Tag starts with 'v'."
+  #           echo "Version: ${VERSION}"
+  #           echo "Continuing..."
+  #           echo "version=${VERSION}" >> $GITHUB_OUTPUT
+  #           exit 0
+  #         else
+  #           echo "The tag doesn't start with 'v'. To release a new version, the tag must start with 'v'"
+  #           exit 1
+  #         fi
+  #   outputs:
+  #     version: ${{ steps.check.outputs.version }}
       
   release:
     environment: release
     runs-on: ubuntu-latest
-    needs: [check-tag]
     container:
       image: node:20
     steps:
+      - name: Save version
+        id: get-version
+        run: |
+          REF="${{ github.ref }}"
+          VERSION="${REF##refs/tags/v}"
+          echo "Version: ${VERSION}"
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
       - name: Checkout the main branch
         uses: actions/checkout@v4
       - name: Install Dependencies
@@ -56,9 +62,9 @@ jobs:
         id: build
         run: |
           git config --global --add safe.directory /__w/sagemaker-code-editor/sagemaker-code-editor
-          sh ./scripts/install.sh -t ${{ needs.check-tag.outputs.version }}
+          sh ./scripts/install.sh -t ${{ steps.get-version.outputs.version }}
           
-          TARBALL_NAME="code-editor${{ needs.check-tag.outputs.version }}.tar.gz"
+          TARBALL_NAME="code-editor${{ steps.get-version.outputs.version }}.tar.gz"
           echo "tarball_name=${TARBALL_NAME}" >> $GITHUB_OUTPUT
           
           SHA256_HASH=$(sha256sum ${TARBALL_NAME} | awk '{ print $1 }')
@@ -67,13 +73,14 @@ jobs:
         id: publish
         uses: softprops/action-gh-release@v2
         with:
-          name: Code Editor ${{ needs.check-tag.outputs.version }}
-          tag_name: v${{ needs.check-tag.outputs.version }}
+          name: Code Editor ${{ steps.get-version.outputs.version }}
+          tag_name: v${{ steps.get-version.outputs.version }}
           files: |
             ${{ steps.build.outputs.tarball_name }}
     outputs:
       sha256_hash: ${{ steps.build.outputs.sha256_hash }}
       assets: ${{ steps.publish.outputs.assets }}
+      version: ${{ steps.get-version.outputs.version }}
 
   # update-feedstock-files:
   #   runs-on: ubuntu-latest
